SFDCProject/src/objects/Test_Partner_User__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Test Partner User</label>
</CustomObject>